# WeChat-cleanner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PREVIEW_FEATURE.md  README.md  default.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/examples/: display_showcase.rs  display_usage.rs
cli/src/: display.rs  main.rs  operations.rs
cli/src/handlers/: cleaner.rs  config.rs  mod.rs  scan.rs
core/: Cargo.toml  build.rs
core/examples/: complete_display_demo.rs  display_example.rs  simple_import_test.rs
core/src/: cleaner.rs  display.rs  file_utils.rs  lib.rs  progress.rs  scanner.rs
core/src/config/: mod.rs  settings.rs
core/tests/: test_cleaning_preview_display.rs
display_core/: Cargo.toml
display_core/src/: lib.rs
display_derive/: Cargo.toml
display_derive/src/: lib.rs
docs/: CLEANER_REFACTOR.md  CONTRIBUTING.md  DISPLAY_DERIVE_GUIDE.md  DISPLAY_FEATURE.md  DISPLAY_INTERFACE_FINAL.md  DISPLAY_INTERFACE_REFACTOR.md  README_DISPLAY_FEATURE.md  REFACTOR_SUMMARY.md  cleaner-preview-restore.md  cleaner-simplification.md  cli-fix-summary.md  display_feature_integration.md  project-integration-summary.md
lib/: Cargo.toml
lib/src/: errors.rs  lib.rs
lib/src/config/: mod.rs  settings.rs
lib/src/core/: cleaner.rs  file_utils.rs  mod.rs  progressor.rs  scanner.rs
tests/: test_display_feature.sh
