[package]
name = "core"
version = "0.1.0"
edition = "2024"
description = "微信缓存清理工具核心库"
authors = ["skitta <skitta@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/skitta/wechat-cleaner"

# 优化包的构建配置
[lib]
name = "wechat_cleaner"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.99"
config = "0.15.14"
dirs = "6.0.0"
humantime = "2.2.0"
md-5 = "0.10.6"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
walkdir = "2.5.0"
toml = "0.9.5"
log = "0.4.27"
bytesize = "1.3.0"
# Display 功能相关依赖（可选）
display_core = { path = "../display_core", optional = true }
display_derive = { path = "../display_derive", optional = true }

[dev-dependencies]
tempfile = "3.20.0"

# 性能优化特性
[features]
default = ["display"]
native-optimizations = []
# Display 功能特性
display = ["dep:display_core", "dep:display_derive"]
